tests/tooling/fixtures/native/execution/positive/switch_case_for_false_fallthrough_return.objc3
module SwitchCaseForFalseFallthroughReturn;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      for (let i = 0; false; i = i + 1) {
        return 9;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
