tests/tooling/fixtures/native/execution/negative/switch_case_for_true_break_conservative_reject.objc3
module SwitchCaseForTrueBreakConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      for (let i = 0; true; i = i + 1) {
        break;
      }
    case 2:
      return 42;
    default:
      return 9;
  }
}
